# ros_project

opencv_project/人耳识别/: CMakeLists.txt  ear_1.cpp  ear_2.cpp  ear_3.cpp  finnal.cpp  readme.txt  sift.cpp
ros_demos/off_board_demo/: CMakeLists.txt  package.xml
ros_demos/off_board_demo/src/: set_position_01.cpp
ros_demos/ros_demo/: CMakeLists.txt  package.xml
ros_demos/ros_demo/src/: demo_msg_publisher.cpp  demo_msg_subscriber.cpp  demo_srv_client.cpp  demo_srv_server.cpp  demo_topic_publisher.cpp  demo_topic_subscriber.cpp  fibonacci_client.cpp  fibonacci_server.cpp
tiny-slam-test/: CMakeLists.txt
tiny-slam-test/src/: test_lab_reverse.c  test_loop_closing.c
tiny-slam-test/test/: test_loop_closing
